2008-03-31  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin and Mitz's rubber stamp

        Remove dataForArchivedSelection(WebCore::Frame*) from the EditorClient - only usage is now directly in WebCore

        * page/EditorClient.h:
        * svg/graphics/SVGImageEmptyClients.h:

        * platform/mac/PasteboardMac.mm:
        (WebCore::Pasteboard::writeSelection): Make the archive and get the data directly

2008-03-31  Brady Eidson  <beidson@apple.com>

        Reviewed by Mitz Pettel

        Fix for http://bugs.webkit.org/show_bug.cgi?id=18183

        Despite the bug reporter's instructions, I have still not been able to actually reproduce this crash and 
        therefore don't know how to make a layout test for it.

        * loader/archive/ArchiveResource.cpp:
        (WebCore::ArchiveResource::response): Fix potential null dereference

2008-03-29  Adam Roben  <aroben@apple.com>

        Fix Bug 18208: Acid3 test 65 takes >33ms due to plugin refreshing on
        Windows

        <http://bugs.webkit.org/show_bug.cgi?id=18208>

        We now keep track of all the plugin paths found each time refresh() is
        called. We'll only instantiate PluginPackages if there are new paths
        or paths with changed timestamps since the last time refresh() was
        called.

        Reviewed by Darin Adler and Anders Carlsson.

        * plugins/PluginDatabase.cpp:
        (WebCore::PluginDatabase::refresh):
          - Only instantiate PluginPackages if there is a new path or a path
            with a changed timestamp since we last ran refresh().
          - Cache the set of plugin paths found and their timestamps for the
            next call to refresh().
          - Only re-register MIME types if our set of plugins changed.
        * plugins/PluginDatabase.h: Added a new member to cache plugin paths
        and their timestamps.

2008-03-29  Adam Roben  <aroben@apple.com>

        Separate filesystem crawling from PluginPackage instantiation